# bypass

./: Cargo.toml  bypass.code-workspace  nuget.config
.github/workflows/: build.yml  release.yml
dotnet/: Bypass.csproj  Bypass.sln  Injector.cs
examples/: chrome1.rs  firefox1.rs  reqwest1.rs
src/: chrome_hook.rs  chrome_ssl_hook.rs  dns_hook.rs  injector.rs  lib.rs  log.rs  schannel_ssl_hook.rs  utils.rs  ws2_native_dns_hook.rs  ws2_socket_dns_hook.rs
src/hooks/: boringssl_hook.rs  mod.rs  new_process_hook.rs  schannel_hook.rs  schannel_ssl_hook.rs  ws2_native_dns_hook.rs  ws2_socket_dns_hook.rs
tests/: chrome1.rs  firefox1.rs  integration_tests.rs  reqwest1.rs
