[package]
name = "bypass"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]


[profile.release]
opt-level = "z"
panic = "abort"
strip = true
lto = true

[features]
log = []

[dependencies]
anyhow = { version = "1.0.86" }
axum = "0.7.5"
dll-syringe = "0.15.2"
flume = "0.11.0"
frida-gum = { version = "0.13.6", features = ["auto-download"] }
hickory-proto = "0.24.1"
lazy_static = "1.4.0"
log = { version = "0.4.21", features = ["std", "serde"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["net", "rt", "rt-multi-thread"] }


[dependencies.windows]
version = "0.57.0"
features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Security_Authentication_Identity",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Networking_WinSock",
]

[dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Security_Authentication_Identity",
    "Win32_Security_Credentials",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_Networking_WinSock",
]


[dev-dependencies]
libloading = "0.8.3"
reqwest = { version = "0.12.2", features = ["native-tls"] }
test-cdylib = { git = "https://github.com/Summpot/test-cdylib.git" }
tokio = { version = "1.38.0", features = ["macros"] }
which = "6.0.1"
bypass = { path = ".", features = ["log"] }
env_logger = "0.11.3"
test-log = "0.2.16"
